--- a/css/foundation.css
+++ b/css/foundation.css
@@ -1038,7 +1038,7 @@ td {
 
 /* Default Link Styles */
 a {
-  color: #2ba6cb;
+  color: #dcdcdc;
   text-decoration: none;
   line-height: inherit; }
   a:hover, a:focus {
@@ -1321,7 +1321,7 @@ button, .button {
   padding-bottom: 0.8125em;
   padding-left: 1.5em;
   font-size: 1em;
-  background-color: #2ba6cb;
+  background-color: #dcdcdc;
   border-color: #2284a1;
   color: white; }
   button:hover, button:focus, .button:hover, .button:focus {
@@ -1381,7 +1381,7 @@ button, .button {
     text-align: right;
     padding-right: 0.75em; }
   button.disabled, button[disabled], .button.disabled, .button[disabled] {
-    background-color: #2ba6cb;
+    background-color: #dcdcdc;
     border-color: #2284a1;
     color: white;
     cursor: default;
@@ -1393,7 +1393,7 @@ button, .button {
     button.disabled:hover, button.disabled:focus, button[disabled]:hover, button[disabled]:focus, .button.disabled:hover, .button.disabled:focus, .button[disabled]:hover, .button[disabled]:focus {
       color: white; }
     button.disabled:hover, button.disabled:focus, button[disabled]:hover, button[disabled]:focus, .button.disabled:hover, .button.disabled:focus, .button[disabled]:hover, .button[disabled]:focus {
-      background-color: #2ba6cb; }
+      background-color: #dcdcdc; }
     button.disabled.secondary, button[disabled].secondary, .button.disabled.secondary, .button[disabled].secondary {
       background-color: #e9e9e9;
       border-color: #d0d0d0;
@@ -2738,7 +2738,7 @@ form.custom {
       background: #090909;
       color: white; }
     .top-bar-section ul li > a.button {
-      background: #2ba6cb;
+      background: #dcdcdc;
       font-size: 0.8125em; }
       .top-bar-section ul li > a.button.hover {
         background: #2284a1; }
@@ -3520,7 +3520,7 @@ form.custom {
   position: relative;
   padding: 0.6875em 1.3125em 0.75em 0.6875em;
   font-size: 0.875em;
-  background-color: #2ba6cb;
+  background-color: #dcdcdc;
   border-color: #2284a1;
   color: white; }
   .alert-box .close {
@@ -3571,13 +3571,13 @@ form.custom {
     float: left;
     font-size: 0.6875em;
     text-transform: uppercase;
-    color: #2ba6cb; }
+    color: #dcdcdc; }
     .breadcrumbs > *:hover a, .breadcrumbs > *:focus a {
       text-decoration: underline; }
     .breadcrumbs > * a,
     .breadcrumbs > * span {
       text-transform: uppercase;
-      color: #2ba6cb; }
+      color: #dcdcdc; }
     .breadcrumbs > *.current {
       cursor: default;
       color: #333333; }
@@ -3631,7 +3631,7 @@ kbd {
   position: relative;
   padding: 0.1875em 0.625em 0.25em;
   font-size: 0.875em;
-  background-color: #2ba6cb;
+  background-color: #dcdcdc;
   color: white; }
   .label.radius {
     -webkit-border-radius: 3px;
@@ -3690,12 +3690,12 @@ kbd {
     .pagination li.unavailable:hover a, .pagination li.unavailable a:focus {
       background: transparent; }
     .pagination li.current a {
-      background: #2ba6cb;
+      background: #dcdcdc;
       color: white;
       font-weight: bold;
       cursor: default; }
       .pagination li.current a:hover, .pagination li.current a:focus {
-        background: #2ba6cb; }
+        background: #dcdcdc; }
 
 .pagination-centered {
   text-align: center; }
@@ -3728,7 +3728,7 @@ kbd {
     border-color: #2284a1;
     margin-bottom: 1.25em;
     padding: 1.25em;
-    background: #2ba6cb;
+    background: #dcdcdc;
     -webkit-box-shadow: 0 1px 0 rgba(255, 255, 255, 0.5) inset;
     box-shadow: 0 1px 0 rgba(255, 255, 255, 0.5) inset; }
     .panel.callout > :first-child {
@@ -3798,7 +3798,7 @@ kbd {
   padding: 0.125em;
   margin-bottom: 0.625em; }
   .progress .meter {
-    background: #2ba6cb;
+    background: #dcdcdc;
     height: 100%;
     display: block; }
   .progress.secondary .meter {
@@ -3838,7 +3838,7 @@ kbd {
     font-size: 0.875em; }
     .side-nav li a {
       display: block;
-      color: #2ba6cb; }
+      color: #dcdcdc; }
     .side-nav li.active > a:first-child {
       color: #4d4d4d;
       font-weight: bold; }
@@ -3875,7 +3875,7 @@ kbd {
       -webkit-border-radius: 1000px;
       border-radius: 1000px;
       font-weight: bold;
-      background: #2ba6cb;
+      background: #dcdcdc;
       padding: 0.1875em 0.5625em;
       cursor: default;
       color: white; }
@@ -4105,7 +4105,7 @@ a.th {
   color: #333333; }
   .has-tip:hover, .has-tip:focus {
     border-bottom: dotted 1px #196177;
-    color: #2ba6cb; }
+    color: #dcdcdc; }
   .has-tip.tip-left, .has-tip.tip-right {
     float: none !important; }
 
@@ -4134,7 +4134,7 @@ a.th {
     border-color: transparent transparent black transparent;
     top: -10px; }
   .tooltip.opened {
-    color: #2ba6cb !important;
+    color: #dcdcdc !important;
     border-bottom: dotted 1px #196177 !important; }
 
 .tap-to-close {
