--- a/css/florus.css
+++ b/css/florus.css
@@ -113,6 +113,10 @@ input[type="submit"]::-moz-focus-inner {
     padding: 0 !important;
     border: 0 !important;
 }
+textarea {
+    max-width: 100%;
+    min-width: 100%;
+}
 
 /**
  * Separator
